# CutFEM-fork

./: .gitignore  CMakeLists.txt  GNUPLOT Notes  Notes
cmake/: FindBLACS.cmake  FindLAPACK.cmake  FindMUMPS.cmake  FindSCALAPACK.cmake
cpp/: CMakeLists.txt
cpp/FESpace/: GTypeOfFE.hpp  Ned0.cpp  P1dc.cpp  P2.cpp  README_integrationFunFEM.txt  RT0.cpp  RT1.cpp  expression.cpp  expression.hpp  expression.tpp  finiteElement.cpp  finiteElement.hpp  integrationFunFEM.hpp  integrationFunFEM.hpp.old  integrationFunFEM_debug.hpp  macroElement.hpp  normsFunFEM.hpp
cpp/common/: SparseMatMap.cpp  SparseMatMap.hpp  cut_mesh.hpp  cut_mesh.tpp  interface_levelSet.tpp
cpp/mainFiles/: CutFEEC_darcy.cpp  HodgeLaplace_torus.cpp  MeanCurvatureFlow.cpp  README_bernoulli_free_boundary.md  bernoulli_algorithm.hpp  bernoulli_example.cpp  bernoulli_free_boundary.cpp  cond_nbr_compute.ipynb  cond_nbr_compute.jl  darcy.cpp  darcy2026_rectangle.cpp  darcy_3field.cpp  eigvals_compute.jl  eigvals_compute_slepc.ipynb  maxwell.cpp  maxwell3D.cpp  maxwell_3D.ipynb  maxwell_old.cpp  plotting.ipynb  scalar_obstacle.cpp  stokesRT.cpp
cpp/mainFiles/meshes/: ball_hole_0  ball_hole_1  cube_0  cube_1  cube_2  cube_hole_0  cube_hole_1  cube_hole_2  cyli_0  cyli_0.msh  cyli_1  cyli_2  mesh40.mesh  square10.msh  square20.msh  square40.msh  square_hole_20.msh  square_hole_40.msh  square_hole_80.msh  test.h5  test.xdmf
cpp/num/: DA.hpp  gnuplot.hpp  matlab.hpp
cpp/parallel/: CMakeLists.txt
cpp/problem/: baseCutProblem.hpp  baseCutProblem_Function.hpp  baseProblem.hpp  baseProblem_Function.hpp  itemVF.hpp  testFunction.hpp
cpp/solver/: CMakeLists.txt
